Fix padding on mobile

--- a/assets/css/website.css
+++ b/assets/css/website.css
@@ -22237,6 +22237,12 @@ hr.horizontal.gray-light {
   hr.horizontal.dark {
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0));
   }
+
+  /* remove left padding */
+  .px-10 {
+    padding-right: 0 !important;
+    padding-left: 0 !important;
+  }
 }
 
 .overflow-visible {
